force-app/main/default/objects/Refresh_Leave_Rule__mdt/Refresh_Leave_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Refresh Leave Rule</label>
    <pluralLabel>Refresh Leave Rules</pluralLabel>
</CustomObject>