force-app/main/default/objects/Refresh_Leave_Rule__mdt/fields/Days_Granted__c.field-meta.xml
<CustomField>
    <fullName>Days_Granted__c</fullName>
    <label>Days Granted</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>