force-app/main/default/objects/Refresh_Leave_Rule__mdt/fields/Grant_Window_Months__c.field-meta.xml
<CustomField>
    <fullName>Grant_Window_Months__c</fullName>
    <label>Grant Window Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>