force-app/main/default/objects/Refresh_Leave_Rule__mdt/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <label>Years of Service</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>